kubernetes/main/apps/database/dragonfly/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-operator
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly-operator
  ingress:
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dragonfly
